Add OS matrix for Ubuntu, Windows and macOS